<resources>
    <string name="app_name">AplikasiKesehatanMental</string>
    <string name="remember_me">

Remember Me
</string>
    <string name="register_title">Register</string>
    <string name="register">REGISTER</string>
    <string name="button">Button</string>
    <string name="psikiater">Psikiater</string>
    <string name="pasien">Pasien</string>
    <string name="click_here">Click here</string>
    <string name="have_an_acc">Have an account?</string>
    <string name="success_sign_up">Register Success!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">LOG IN</string>
    <string name="selamat_datang">SELAMAT DATANG,</string>
    <string name="riwayat_konseling">RIWAYAT KONSELING</string>
    <string name="lihat_konselor">LIHAT KONSELOR</string>
    <string name="daftar_konseling">DAFTAR KONSELING</string>
    <string name="upcoming_co">UPCOMING COUNSELING</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="data_pribadi">DATA PRIBADI</string>
    <string name="data_akun">DATA AKUN</string>
    <string name="edit">EDIT</string>
    <string name="instruction">Untuk melakukan konsultasi cukup dengan mengeklik jadwal yang diinginkan. Setelah itu, anda diminta untuk melakukan verifikasi pembayaran.</string>
    <string name="pilih_jadwal">Pilih Jadwal Konsultasi</string>
    <string name="send">SEND</string>
    <string name="jadwal_konseling">JADWAL KONSELING</string>
    <string name="hasil_konseling">HASIL KONSELING</string>
    <string name="counselor_name">dr. Alfa Romeo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_edit">Edit Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
</resources>