<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <TextView
        android:id="@+id/reg_head"
        android:layout_width="309dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="43dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:hint="@string/register"
        android:textAppearance="@style/register"
        android:gravity="top"
        />
    <EditText
        android:id="@+id/fullname"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="105dp"
        android:hint="Fullname"
        android:background="@color/purple"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="164dp"
        android:background="@color/purple"
        android:hint="Username"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="228dp"
        android:background="@color/purple"
        android:hint="Email"
        />

    <EditText
        android:id="@+id/no_hp"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="331dp"
        android:background="@color/purple"
        android:hint="Nomor HP " />

    <RadioGroup
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="36dp"
        android:layout_marginTop="283dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:id="@+id/role_txt"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:text="Role"
            android:textColor="#7F10A6"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/type_psikiater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psikiater"
            android:textColor="#7F10A6"
            />

        <RadioButton
            android:id="@+id/type_pasien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/pasien"
            android:textColor="#7F10A6"/>
    </RadioGroup>

    <TextView
        android:id="@+id/birthplace"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="381dp"
        android:background="@color/purple_200"
        />
    <DatePicker
        android:id="@+id/birthdate"
        android:layout_width="181dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="194dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="381dp"
        android:background="@color/purple_200"
        />
    <TextView
        android:id="@+id/register"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="157dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="624dp"
        android:text="@string/register"
        android:textAppearance="@style/register"
        android:gravity="center_horizontal|top"
        android:background="@color/purple"
        />

    <TextView
        android:id="@+id/have_an_acc"
        android:layout_width="149dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="131dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="831dp"
        android:text="@string/have_an_acc"
        android:textAppearance="@style/have_an_acc"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/click_here"
        android:layout_width="120dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="143dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="851dp"
        android:text="@string/click_here"
        android:textAppearance="@style/click_here"
        android:gravity="center_horizontal|top"
        />
    <EditText
        android:id="@+id/new_password"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:background="@color/purple"
        android:hint="@string/password"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"

        android:layout_marginTop="431dp"/>
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:background="@color/purple"
        android:hint="@string/confirm_password"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"

        android:layout_marginTop="480dp"/>


</RelativeLayout>