<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/edit_profil"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/edit_profil"
            android:textAppearance="@style/edit_profil" />

        <TextView
            android:id="@+id/data_pribadi"
            android:layout_width="354dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/title_rectangle"
            android:gravity="left|top"
            android:padding="5dp"
            android:text="@string/data_pribadi"
            android:textAppearance="@style/profile_title" />


        <LinearLayout
            android:layout_width="354dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textAppearance="@style/identity"
                android:text="Nama" />

            <TextView
                android:id="@+id/name_info"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="SUKI WIDODO"
                android:textAppearance="@style/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/birth_place_and_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="Tempat, tanggal lahir"
                android:textAppearance="@style/identity" />

            <TextView
                android:id="@+id/birth_place_and_date_info"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Surabaya, 1 Mei 1999"
                android:textAppearance="@style/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="354dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="Nomor HP"
                android:textAppearance="@style/identity" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="081322112222"
                android:textAppearance="@style/name" />
        </LinearLayout>

        <TextView
            android:id="@+id/data_akun"
            android:layout_width="354dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/title_rectangle"
            android:padding="5dp"
            android:text="@string/data_akun"
            android:textAppearance="@style/profile_title" />

        <LinearLayout
            android:layout_width="354dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textAppearance="@style/identity"
                android:text="Username" />

            <TextView
                android:id="@+id/username_info"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="\@sukiyuu"
                android:textAppearance="@style/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="Email"
                android:textAppearance="@style/identity" />

            <TextView
                android:id="@+id/email_info"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="sukiyuu@gmail.com"
                android:textAppearance="@style/name" />
        </LinearLayout>

        <TextView
            android:id="@+id/edit_data"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/edit"
            android:textAppearance="@style/edit_data"
            android:textSize="18sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>